# DGP

./: CMakeLists.txt  DGP.c  LICENSE  README.md  Resources.qrc  dgp-cli.cpp  dgp.cpp  dgp.h  includes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.rc  version.h  versions.txt
